santa/service.yml
apiVersion: v1
kind: Service
metadata:
  name: santa
  namespace: santa
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: santa
